# projet2A

./: .env.template  .gitignore  .~lock.plan_projet.odt#  .~lock.recherche_api_externe.odt#  LICENSE  README.md  Recipe.py  diagramme_bdd.drawio  docker-compose.yml  main.py  nano  package-lock.json  package.json  plan_projet  plan_projet.odt  pyproject.toml  recherche_api_externe.odt  requirements.txt  ruff.toml  start.sh  test.py
.github/workflows/: deploy.yml  tests.yml
Backlog/: BacklogApi.md  BacklogArchi.md  BacklogBackend.md  BacklogDAO.md  BacklogDivers.md  BacklogFront.md  BacklogGeneral.md  BacklogProbleme.md
Christelle/: test_result.py  tests_api.py
Documentation/Images/: Cheminement_frontend.drawio  diagramme_bdd.drawio
Documentation/Infos_divers/: contenerisation.md  pour_pre-commit.md  pour_pre_commit.md  worklows.md
Documentation/reunion_construction/: reunion1_23_01.md  reunion2_30_01.md
data/: export_ingredients_from_ods.py  ingredients.csv  init_db.sql  pop_db.sql  pop_db_test.sql
doc_construction/: reunion1_23_01.md
src/: A_faire.md  eslint.config.js
src/backend/: .env.template  Dockerfile  README.md  docker-compose.yml  exceptions.py  main.py  pyproject.toml  requirements.txt  seed_data.py  setup.py
src/backend/api/: charger_seed.py  config.py  deps.py  index.html  main.py  main_vold.py
src/backend/api/routers/: auth.py  ingredients.py  recipes.py  stocks.py  users.py
src/backend/api/schemas/: auth.py  ingredients.py  recipes.py  stocks.py  users.py
src/backend/business_objects/: ingredient.py  recipe.py  stock.py  stock_item.py  unit.py  user.py
src/backend/clients/: spoonacular_client.py
src/backend/dao/: auth_service.py  db_connection.py  ingredient_dao.py  recipe_dao.py  session_dao.py  stock_dao.py  stock_item_dao.py  user_dao.py
src/backend/data/: export_ingredients_from_ods.py  ingrédients.ods  init_db.sql  pop_db.sql  pop_db_test.sql
src/backend/scripts/: demo_session_dao.py  script_jwt_utils.py  script_spoonacular.py  seed_data.py
src/backend/services/: auth_service.py  find_recipe.py  find_recipe_api.py  find_recipe_db.py  find_recipe_factory.py  stock_service.py  user_service.py
src/backend/tests/: script_mdp_data.py
src/backend/tests/api/: conftest.py  test_auth.py  test_users.py
src/backend/tests/test_api/: conftest.py  test_admin_users_api.py  test_ingredient_api.py  test_recipes_api.py  test_stock_api.py
src/backend/tests/tests_business_objects/: test_ingredient.py  test_recipe.py  test_stock.py  test_stock_item.py  test_user.py
src/backend/tests/tests_dao/: test_ingredient_dao.py  test_recipe_dao.py  test_session_dao.py  test_stock_dao.py  test_stock_item_dao.py  test_user_dao.py
src/backend/tests/tests_services/: test_auth_service.py  test_find_recipe_api.py  test_find_recipe_db.py  test_find_recipe_factory.py  test_stock_service.py  test_user_service.py
src/backend/utils/: ingredients_loader.py  ingredients_tags_loader.py  jwt_utils.py  log_init.py  reset_database.py  securite.py  singleton.py
src/business_objects/: ingredient.py  lot.py  recipe.py  stock.py  unit.py  user.py
src/busness_objets/: user.py
src/frontend/: .env.local.template  Dockerfile  README.md  package-lock.json  page.js  vite.config.js
src/frontend/src/: .stylelintrc.json  App.css  App.jsx  App_old.jsx  eslint.config.js  main_frontend.py  seed_data.py
src/frontend/src/api/: apiClient.js  authApi.js  authApi_vers_C.js  ingredientsApi.js  recetteApi.js  stockApi.js  stockApi_vers_C.js  tokenStorage.js  usersApi.js
src/frontend/src/components/: AddIngredientForm.jsx  AdminAuth.jsx  AfficherIngredient.jsx  AfficherRecette.jsx  AfficherRecetteDetail.jsx  AfficherRecettes.jsx  AfficherStock.jsx  AfficherUtilisateur.jsx  AjoutUtilisateur.jsx  Auth.jsx  BarreSaisieStock.jsx  Confirmation.jsx  CreationCompte.jsx  CreationIngredientGlobal.jsx  GestionIngredients.jsx  GestionRecettes.jsx  GestionStocks.jsx  GestionUtilisateurs.jsx  Home.jsx  InterfaceAdmin.jsx  InventaireFrigo.jsx  Login.jsx  PokemonDetails.jsx  PokemonSearch.jsx  PrepaConsume.jsx  Register.jsx  SaisieIngredientsInvite.jsx  SelecteurStock.jsx  Stock._v2jsx.jsx  Stock.jsx  Stock_old.jsx  Test.jsx
src/frontend/src/hooks/: useIngredientsRecette.js  useStockData.js  useTrouverRecette.js  useTrouverRecetteInvite.js  userStockTable.js
src/frontend/src/styles/: AfficherRecettes.css  Auth.css  Confirmation.css  Gestion.css  InterfaceAdmin.css  PokemonDetails.css  PokemonSearch.css  PrepaConsume.css  Register.css  SaisieIngredients.css  SelecteurStock.css  typeColors.js
src/projet2a.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tests/: test_ingredient.py  test_stock.py  test_stock_item.py  test_user.py
src/tests/backend/tests_business_objects/: test_recipe.py
src/tests/backend/tests_dao/: test_recipe_dao.py  test_session_dao.py  test_user_dao.py
src/tests/backend/tests_services/: test_auth_service.py  test_find_recipe_db.py  test_user_service.py
tests/: test_stock.py  test_user.py
