[project]
name = "projet2a"
version = "0.1.0"
description = "Gestionnaire de stock"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."] # pour que pytest trouve les modules
testpaths = ["src/backend/tests"]  

[tool.ruff]
src = ["."] # pour se placer a la racine du projet (sinon ["src"])
