[project]
name = "backend"
version = "0.1.0"
description = "Backend FastAPI - Recipe application"
requires-python = ">=3.11"

dependencies = [
    # --- Serveur API ---
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",

    # --- Sécurité & Configuration ---
    "python-dotenv>=1.0",
    "bcrypt>=4.1",
    "pyyaml>=6.0",

    # --- Base de données ---
    "psycopg2-binary>=2.9",

    # --- Utilitaires ---
    "pydantic>=2.6",
    "email-validator>=2.1",

    # --- Appels HTTP externes ---
    "httpx>=0.27",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
